<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/global_bg">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:elevation="10dp"
        android:background="@color/white">
        <ImageButton
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_left_arrow"
            android:padding="5dp"
            android:background="@color/white"
            android:clickable="true"
            android:id="@+id/home_img_button_rate_card"
            android:scaleType="fitCenter"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:textColor="@color/skin"
            android:gravity="center"
            android:layout_marginRight="60dp"
            android:text="@string/title_rate_card"
            />
    </android.support.v7.widget.Toolbar>
    <RelativeLayout
        android:id="@+id/progressBar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rateCardContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_1"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="20dp"
            card_view:cardCornerRadius="4dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAlignment="center"
            android:background="@color/white"
            android:id="@+id/rate_card_normal"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:background="@color/purple"
                android:id="@+id/card_normal_tv"
                android:text="@string/card_normal_rate"
                android:paddingLeft="20dp"
                android:textColor="@color/white"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_normal_tv"
                android:padding="10dp"
                android:textColor="@color/global_text"
                android:id="@+id/card_normal_desc_tv"
                android:text="@string/normal_desc"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_5km"
                android:textColor="@color/global_text"
                android:padding="10dp"
                android:id="@+id/normal_5km_tv"
                android:layout_below="@+id/card_normal_desc_tv"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_normal_desc_tv"
                android:layout_toRightOf="@+id/normal_5km_tv"
                android:padding="10dp"
                android:textColor="@color/white"
                android:background="@color/skin"
                android:text="@string/normal_rate_5km"
                android:id="@+id/normal_5km_rate_tv"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/normal_more_5km"
                android:padding="10dp"
                android:textColor="@color/global_text"
                android:id="@+id/normal_10km_tv"
                android:layout_below="@+id/normal_5km_tv"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/normal_5km_tv"
                android:layout_toRightOf="@+id/normal_10km_tv"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:background="@color/skin"
                android:text="@string/normal_rate_more_5km"
                android:id="@+id/normal_10km_rate_tv"/>
        </RelativeLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/card_view_2"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_below="@id/card_view_1"
            card_view:cardCornerRadius="4dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:textAlignment="center"
            android:background="@color/white"
            android:id="@+id/rate_card_express"

            android:layout_below="@+id/rate_card_normal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:background="@color/purple"
                android:id="@+id/card_express_tv"
                android:text="@string/card_express_rate"
                android:paddingLeft="20dp"
                android:textColor="@color/white"
                android:paddingTop="10dp"
                android:paddingRight="10dp"
                android:paddingBottom="10dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_express_tv"
                android:padding="10dp"
                android:textColor="@color/global_text"
                android:id="@+id/card_express_desc_tv"
                android:text="@string/normal_desc"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_5km"
                android:padding="10dp"
                android:textColor="@color/global_text"
                android:id="@+id/express_5km_tv"
                android:layout_below="@+id/card_express_desc_tv"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_express_desc_tv"
                android:layout_toRightOf="@+id/express_5km_tv"
                android:padding="10dp"
                android:textColor="@color/white"
                android:background="@color/skin"
                android:text="@string/express_rate_5km"
                android:id="@+id/express_5km_rate_tv"/>
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/normal_more_5km"
                android:padding="10dp"
                android:textColor="@color/global_text"
                android:id="@+id/express_10km_tv"
                android:layout_below="@+id/express_5km_tv"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/express_5km_tv"
                android:layout_toRightOf="@+id/express_10km_tv"
                android:padding="10dp"
                android:layout_marginTop="5dp"
                android:textColor="@color/white"
                android:background="@color/skin"
                android:text="@string/express_rate_more_5km"
                android:id="@+id/express_10km_rate_tv"/>
        </RelativeLayout>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

</LinearLayout>